--- a/pkg/pfv/FlowEngine.hpp.in
+++ b/pkg/pfv/FlowEngine.hpp.in
@@ -470,7 +470,7 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		.def("getIncidentCells",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::getIncidentCells,(boost::python::arg("vertexId")),"get ids of all cells of which vertexId is a vertex. Typical usage is for getting cells indident to a boundary.")
 		.def("getCellBarycenter",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::cellBarycenterFromId,(boost::python::arg("id")),"get barycenter of cell 'id'.")
 		.def("getCellCenter",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::cellCenter,(boost::python::arg("id")),"get voronoi center of cell 'id'.")
-		.def("getCellInvVoidVolume",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::invInitVoidVolume,"get the inverse of the initial void volumes in each cell when pore volumes have been initialized.")
+		.def("getCellInvVoidVolume",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::invInitVoidVolume,(boost::python::arg("id")),"get the inverse of the cell volume for cell 'id' after pore volumes have been initialized and :yref:`FlowEngine:iniVoidVolumes` = True, or compressibility scheme active with :yref:`FlowEngine::fluidBulkModulus`.")
 		.def("getCellPressure",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::cellPressure,(boost::python::arg("id")),"get pressure by cell 'id'. Note: getting pressure at position (x,y,z) might be more usefull, see :yref`FlowEngine::getPorePressure`:")
 		.def("getCellTemperature",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::cellTemperature,(boost::python::arg("id")),"get pressure in cell 'id'.")
 		.def("setCellPressure",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::setCellPressure,(boost::python::arg("id"),boost::python::arg("pressure")),"set pressure in cell 'id'.")
