Take into account boost 1.65 and g++ 9.3 combination. I checked that this works with 1.67.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -471,6 +471,10 @@ ENDIF()
 # Detect if RealHP<N> is supported. Allow option to override this for testing.
 FIND_PACKAGE(Mpmath)
 IF((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 9.2.1) OR ((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 8.3.0) AND (ENABLE_MPFR) AND (REAL_PRECISION_BITS GREATER 128)) OR (ALLOW_CRASHES))
+ IF(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION LESS 67)
+    SET(REAL_MULTI_HP "OFF")
+    MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N> because boost version < 1.67 is too old.${Esc}[0m")
+ ELSE()
   IF(MPMATH_FOUND)
     SET(REAL_MULTI_HP "ON")
     IF(NOT ENABLE_MPFR)
@@ -485,6 +489,7 @@ IF((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 9.2.1) OR ((CMAKE_CXX_COMPI
     SET(REAL_MULTI_HP "OFF")
     MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, it can work on this system, but python3-mpmath package is missing.${Esc}[0m")
   ENDIF()
+ ENDIF()
 ELSE()
   SET(REAL_MULTI_HP "OFF")
   MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, this compiler is too old to make this work.${Esc}[0m")
