Some more replacement of yade --checks →→ yade --check

--- a/scripts/build-infrastructure/master.cfg
+++ b/scripts/build-infrastructure/master.cfg
@@ -110,21 +110,21 @@ f1.addStep(Bzr(repourl=bzrurl, mode="update"))
 f1.addStep(Compile(description="Compiling with eigen3", command=["scons", "features=opengl,gts,openmp,vtk,qt4,cgal",
             "chunkSize=20", "jobs=4", "PREFIX=" + prefix]))
 f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--test"]))
-f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--checks"], 
+f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--check"], 
 			description="checking eigen3 build", descriptionDone="checking eigen3 build done"))
 
 # EIGEN3 - DEBUG
 #f1.addStep(Compile(description="Compiling debug with eigen3", command=["scons", "features=opengl,gts,openmp,vtk,qt4,cgal",
 #            "chunkSize=20", "jobs=4","debug=true", "PREFIX=" + prefix]))
 #f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--test"]))
-#f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--checks"], 
+#f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--check"], 
 #			description="checking eigen3 debug build", descriptionDone="checking eigen3 debug build done"))
 #
 # EIGEN2
 f1.addStep(Compile(description="Compiling with eigen2", command=["scons", "features=opengl,gts,openmp,vtk,qt4,cgal",
             "chunkSize=20", "jobs=4", "PREFIX=" + prefix, "eigen2=true"]))
 f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--test"]))
-f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--checks"], 
+f1.addStep(Test(command=[WithProperties(prefix + "/bin/yade-bzr%(got_revision)s"), "--check"], 
 			description="checking eigen2 build", descriptionDone="checks eigen2 build done"))
 
 # doc
