cleaner exit and spawn/despawn - enabling multiple initializations

--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -356,15 +356,12 @@ def userSession(gui='none',qapp=None):
 			if not yade.runtime.opts.exitAfter:
 				mp.waitingCommands=True
 				ipshell()
-			mp.wprint("sending exit command to workers", mp.numThreads)
-			res=mp.sendCommand(list(range(1,mp.numThreads)),"exit",wait=True) # a blocking call to workers, we only finalize after letting them now
+			mp.disconnect()
 			mp.MPI.Finalize()
 		else:
 			# after the script execution, never exit directly. Instead, wait a command from master to do so.
-			# We do this even in non-interactive mode since that's the only way found to exit without various openmpi warnings.
-			# In that case the wait process is spawned just long enough to receive the 'exit' command
+			# We do this even in non-interactive mode, in that case the wait process is spawned just long enough to receive the 'disconnect' instruction from master
 			mp.spawnedProcessWaitCommand()
-			mp.wprint("received and exit command, finalizing")
 			mp.MPI.Finalize()
 
 ## run userSession in a way corresponding to the features we use:
