Print processor architecture Endianness in printAllVersions()

--- a/py/libVersions.py.in
+++ b/py/libVersions.py.in
@@ -260,6 +260,10 @@ def printAllVersions(rstFormat=False):
 	print("Yade precision :  "+str(yade.math.getDigits2(1))+" bits, "+str(yade.math.getDigits10(1))+" decimal places, with"+("" if yade.config.highPrecisionMpmath else "out")+" mpmath")
 	if('RealHP' in yade.config.features):
 		print("Yade RealHP<…> :  "+str(yade.math.getRealHPCppDigits10())+" decimal digits in C++, "+str(yade.math.getRealHPPythonDigits10())+" decimal digits accessible from python")
+	try:
+		print("Little endian  :  "+str(yade.math.isThisSystemLittleEndian()))
+	except Exception as e:
+		print("Little endian  :  unknown")
 	if(rstFormat==False): print("```")
 	print("\nLibraries used :\n")
 	print(lines)
