--- a/py/libVersions.py.in
+++ b/py/libVersions.py.in
@@ -25,6 +25,12 @@ When adding a new version please have a look at these three files:
 from yade._libVersions import *
 import yade.config
 
+def getArchitecture():
+	"""
+	:return: string containing processor architecture name, as reported by ``uname -m`` call or from ``CMAKE_HOST_SYSTEM_PROCESSOR`` cmake variable.
+	"""
+	return '${ARCHITECTURE}'
+
 def getLinuxVersion():
 	"""
 	:return: string containing linux release and version, preferably the value of ``PRETTY_NAME`` from file ``/etc/os-release``.
@@ -260,14 +266,15 @@ def printAllVersions(rstFormat=False):
 	print("Yade precision :  "+str(yade.math.getDigits2(1))+" bits, "+str(yade.math.getDigits10(1))+" decimal places, with"+("" if yade.config.highPrecisionMpmath else "out")+" mpmath")
 	if('RealHP' in yade.config.features):
 		print("Yade RealHP<…> :  "+str(yade.math.getRealHPCppDigits10())+" decimal digits in C++, "+str(yade.math.getRealHPPythonDigits10())+" decimal digits accessible from python")
+	if(rstFormat==False): print("```")
+	print("\nLibraries used :\n")
+	print(lines)
+	print("Linux version  :  "+str(getLinuxVersion()))
+	print("Architecture   :  "+str(getArchitecture()))
 	try:
 		print("Little endian  :  "+str(yade.math.isThisSystemLittleEndian()))
 	except Exception as e:
 		print("Little endian  :  unknown")
-	if(rstFormat==False): print("```")
-	print("\nLibraries used :\n")
-	print(lines)
-	print("Linux version: "+str(getLinuxVersion()))
 	print("")
 
 def getAllVersions(rstFormat=False):
