--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -355,7 +355,7 @@ def userSession(gui='none',qapp=None):
 		from yade import mpy as mp
 		if mp.rank==0:
 			if not yade.runtime.opts.exitAfter:
-				mp.waitingCommands=True
+				mp.declareMasterInteractive()
 				ipshell()
 			mp.disconnect()
 		else:
