Improve warning message about issue #155 (I just noticed that latest progress on this front is not mentioned)

--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -204,7 +204,7 @@ def checkVersions():
 	# Remember that libVersions always can return None, when library does not exist. Make sure this will not lead to a crash.
 	glutVer = yade.libVersions.getVersion('freeglut')
 	if((glutVer != None) and (glutVer > (2,8,1) or glutVer == (-1,-1,-1))):
-		print("\033[93mWarning: freeglut versions higher than 2.8.1 are known to crash\033[0m, see https://gitlab.com/yade-dev/trunk/merge_requests/160")
+		print("\033[93mWarning: freeglut versions higher than 2.8.1 are known to crash\033[0m, see https://gitlab.com/yade-dev/trunk/merge_requests/160 https://gitlab.com/yade-dev/trunk/-/issues/155 https://gitlab.com/yade-dev/trunk/-/issues/107")
 
 def userSession(gui='none',qapp=None):
 	# prepare nice namespace for users
