--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -63,7 +63,8 @@ par.add_argument('-f',help=('Set "Default" filter for logging https://yade-dem.o
                 ('' if 'BoostLog' in features else " (Since this build doesn't use boost::log this option is unavailable, use cmake option -DENABLE_LOGGER=ON to enable)")),dest='verbosity',type=int)
 par.add_argument('-n',help="Run without graphical interface (equivalent to unsetting the DISPLAY environment variable)",dest='nogui',action='store_true')
 par.add_argument('--test',help="Run regression test suite and exit; the exists status is 0 if all tests pass, 1 if a test fails and 2 for an unspecified exception.",dest="test",action='store_true')
-par.add_argument('--check',help='Run a series of user-defined check tests as described in /yade/scripts/checks-and-tests/checks/README and https://yade-dem.org/doc/prog.html#regression-tests',dest='checks',action='store_true')
+par.add_argument('--check',help='Run a quick series of user-defined check tests as described in /yade/scripts/checks-and-tests/checks/README and https://yade-dem.org/doc/prog.html#regression-tests',dest='check',action='store_true')
+par.add_argument('--checkall',help='Run a full series of user-defined check tests as described in /yade/scripts/checks-and-tests/checks/README and https://yade-dem.org/doc/prog.html#regression-tests',dest='checkall',action='store_true')
 par.add_argument('--performance',help='Starts a regular test to measure the productivity',dest='performance',action='store_true')
 par.add_argument('--quickperformance',help='Starts a quick test to measure the productivity',dest='quickperformance',action='store_true')
 par.add_argument('--stdperformance',help='Starts 10 large tests on 200000 spheres. The tests are repeated until 10 runs will have standard deviation of calculation speed < 2%%. Do not start this test while other programs are running. In such case it is unlikely that an average with low standard deviation will be found and the test will keep running forever while trying to find it.',dest='stdperformance',action='store_true')
@@ -189,7 +190,7 @@ from yade.pack import *
 from math import *
 
 # Run the check tests listed in scripts/checks-and-tests/checks/checkList.py
-if opts.checks:
+if opts.check or opts.checkall:
 	checksPath=libDir+'/py/yade/tests/checks'
 	execfile(checksPath+'/checkList.py')
 
