compile on multiarch: ppc64el, mips64el, arm64, i386 (all bullseye)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,11 @@
 # image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
 # image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 # image: registry.gitlab.com/yade-dev/docker-yade:suse15
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-buster
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-mips64el
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
 #
 # Useful link to validator: https://gitlab.com/yade-dev/trunk/-/ci/lint
 
@@ -203,13 +208,45 @@ make_bullseye:
   <<: *artifacts_definition
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
-make_32bit_bullseye:
+mk_bll_i386:
+  <<: *make_definition
+  <<: *artifacts_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
+  tags:
+    - fast
+    - qemu
+
+mk_bll_mips64el:
+  <<: *make_definition
+  <<: *artifacts_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-mips64el
+  tags:
+    - fast
+    - qemu
+
+mk_bll_ppc64el:
+  <<: *make_definition
+  <<: *artifacts_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
+  tags:
+    - fast
+    - qemu
+
+mk_bll_arm64:
+  <<: *make_definition
+  <<: *artifacts_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
+  tags:
+    - fast
+    - qemu
+
+make_32bit_buster:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
     # there can be only one before_script:, so the line below cannot be in a separate template
     - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-buster
 
 make_no_mpi:
   <<: *make_definition
@@ -467,13 +504,49 @@ test_bullseye:
     - make_bullseye
   needs: ["make_bullseye"]
 
-test_32bit_bullseye:
+tst_bll_i386:
+  <<: *test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
+  dependencies:
+    - mk_bll_i386
+  needs: ["mk_bll_i386"]
+  tags:
+    - qemu
+
+tst_bll_mips64el:
+  <<: *test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-mips64el
+  dependencies:
+    - mk_bll_mips64el
+  needs: ["mk_bll_mips64el"]
+  tags:
+    - qemu
+
+tst_bll_ppc64el:
+  <<: *test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
+  dependencies:
+    - mk_bll_ppc64el
+  needs: ["mk_bll_ppc64el"]
+  tags:
+    - qemu
+
+tst_bll_arm64:
+  <<: *test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
+  dependencies:
+    - mk_bll_arm64
+  needs: ["mk_bll_arm64"]
+  tags:
+    - qemu
+
+test_32bit_buster:
   <<: *test_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-buster
   dependencies:
-    - make_32bit_bullseye
-  needs: ["make_32bit_bullseye"]
+    - make_32bit_buster
+  needs: ["make_32bit_buster"]
 
 test_no_mpi:
   <<: *test_definition
@@ -662,13 +735,53 @@ check_bullseye:
     - make_bullseye
   needs: ["make_bullseye"]
 
-check_32bit_bullseye:
+ck_bll_i386:
+  <<: *check_definition
+  before_script:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
+  dependencies:
+    - mk_bll_i386
+  needs: ["mk_bll_i386"]
+  tags:
+    - qemu
+
+ck_bll_mips64el:
+  <<: *check_definition
+  before_script:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-mips64el
+  dependencies:
+    - mk_bll_mips64el
+  needs: ["mk_bll_mips64el"]
+  tags:
+    - qemu
+
+ck_bll_ppc64el:
+  <<: *check_definition
+  before_script:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
+  dependencies:
+    - mk_bll_ppc64el
+  needs: ["mk_bll_ppc64el"]
+  tags:
+    - qemu
+
+ck_bll_arm64:
+  <<: *check_definition
+  before_script:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
+  dependencies:
+    - mk_bll_arm64
+  needs: ["mk_bll_arm64"]
+  tags:
+    - qemu
+
+check_32bit_buster:
   <<: *check_definition
   <<: *skip_wip_test_definition
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-bullseye
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-32bit-buster
   dependencies:
-    - make_32bit_bullseye
-  needs: ["make_32bit_bullseye"]
+    - make_32bit_buster
+  needs: ["make_32bit_buster"]
 
 check_no_mpi:
   <<: *check_definition
