--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -848,6 +848,11 @@ ELSE(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
       ENDIF(ENABLE_TWOPHASEFLOW)
 ENDIF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
 #===============================================
+IF((${ARCHITECTURE} STREQUAL "arm64") OR (${ARCHITECTURE} STREQUAL "mips64el") OR (${ARCHITECTURE} STREQUAL "ppc64el"))
+     MESSAGE(STATUS "ENABLE_MPI was disabled, see https://gitlab.com/yade-dev/trunk/-/issues/179 for details.")
+     SET(ENABLE_MPI OFF)
+ENDIF()
+
 IF(ENABLE_MPI)
   IF(${PYTHON_VERSION_STRING} VERSION_GREATER 3)
   FIND_PACKAGE(MPI REQUIRED)
