Try mips64el without OpenMP (suspect: openmp-accu.hpp)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -673,6 +673,12 @@ ELSE(ENABLE_VTK)
 ENDIF(ENABLE_VTK)
 #===========================================================
 IF(ENABLE_OPENMP)
+  IF(${ARCHITECTURE} STREQUAL "mips64el")
+    SET(ENABLE_OPENMP OFF)
+    MESSAGE(STATUS "Disable OpenMP on mips64el")
+  ENDIF(${ARCHITECTURE} STREQUAL "mips64el")
+ENDIF(ENABLE_OPENMP)
+IF(ENABLE_OPENMP)
   FIND_PACKAGE(OpenMP)
   IF(OPENMP_FOUND)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DYADE_OPENMP ${OpenMP_CXX_FLAGS}")
