--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -213,7 +213,7 @@ mk_bll_i386:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
-    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
   tags:
     - fast
@@ -224,6 +224,9 @@ mk_bll_i386:
 #  <<: *artifacts_definition
 #  before_script:
 #    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+#### OR THIS
+#  before_script:
+#    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
 #  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-mips64el
 #  tags:
 #    - fast
@@ -233,7 +236,7 @@ mk_bll_ppc64el:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
-    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
   tags:
     - fast
@@ -243,7 +246,7 @@ mk_bll_arm64:
   <<: *make_definition
   <<: *artifacts_definition
   before_script:
-    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else export TESTS_AFTER_MAKE="TESTS_AFTER_MAKE"; fi
+    - if [[ ${CI_MERGE_REQUEST_TITLE:0:4} == "WIP:" ]] ; then export SKIP_TEST="SKIP_TEST"; else echo "non-WIP merge request detected"; fi
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
   tags:
     - fast
@@ -505,6 +508,39 @@ test_bullseye:
     - make_bullseye
   needs: ["make_bullseye"]
 
+tst_bll_i386:
+  <<: *test_definition
+  <<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
+  dependencies:
+    - mk_bll_i386
+  needs: ["mk_bll_i386"]
+  tags:
+    - qemu
+  timeout: 2 hours
+
+tst_bll_ppc64el:
+  <<: *test_definition
+  <<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
+  dependencies:
+    - mk_bll_ppc64el
+  needs: ["mk_bll_ppc64el"]
+  tags:
+    - qemu
+  timeout: 2 hours
+
+tst_bll_arm64:
+  <<: *test_definition
+  <<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
+  dependencies:
+    - mk_bll_arm64
+  needs: ["mk_bll_arm64"]
+  tags:
+    - qemu
+  timeout: 2 hours
+
 test_no_mpi:
   <<: *test_definition
   <<: *skip_wip_test_definition
@@ -691,6 +727,39 @@ check_bullseye:
   dependencies:
     - make_bullseye
   needs: ["make_bullseye"]
+
+ck_bll_i386:
+  <<: *check_definition
+  <<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-i386
+  dependencies:
+    - mk_bll_i386
+  needs: ["mk_bll_i386"]
+  tags:
+    - qemu
+  timeout: 2 hours
+
+ck_bll_ppc64el:
+  <<: *check_definition
+  <<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-ppc64el
+  dependencies:
+    - mk_bll_ppc64el
+  needs: ["mk_bll_ppc64el"]
+  tags:
+    - qemu
+  timeout: 2 hours
+
+ck_bll_arm64:
+  <<: *check_definition
+  <<: *skip_wip_test_definition
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye-arm64
+  dependencies:
+    - mk_bll_arm64
+  needs: ["mk_bll_arm64"]
+  tags:
+    - qemu
+  timeout: 2 hours
 
 check_no_mpi:
   <<: *check_definition
