--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -517,7 +517,6 @@ tst_bll_i386:
   needs: ["mk_bll_i386"]
   tags:
     - qemu
-  timeout: 2 hours
 
 tst_bll_ppc64el:
   <<: *test_definition
@@ -528,7 +527,7 @@ tst_bll_ppc64el:
   needs: ["mk_bll_ppc64el"]
   tags:
     - qemu
-  timeout: 2 hours
+  timeout: 45 minutes 
 
 tst_bll_arm64:
   <<: *test_definition
@@ -539,7 +538,7 @@ tst_bll_arm64:
   needs: ["mk_bll_arm64"]
   tags:
     - qemu
-  timeout: 2 hours
+  timeout: 45 minutes
 
 test_no_mpi:
   <<: *test_definition
@@ -737,7 +736,6 @@ ck_bll_i386:
   needs: ["mk_bll_i386"]
   tags:
     - qemu
-  timeout: 2 hours
 
 ck_bll_ppc64el:
   <<: *check_definition
