--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -196,6 +196,7 @@ make_16_04:
 
 make_18_04:
   <<: *make_definition
+  <<: *skip_WIP
   artifacts:
     paths:
       - install
@@ -211,6 +212,7 @@ make_20_04:
 make_stretch:
   <<: *make_definition
   <<: *artifacts_definition
+  <<: *skip_WIP
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
 
 make_buster:
@@ -468,6 +470,7 @@ test_16_04:
 
 test_18_04:
   <<: *test_definition
+  <<: *skip_WIP
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   dependencies:
     - make_18_04
@@ -482,6 +485,7 @@ test_20_04:
 
 test_stretch:
   <<: *test_definition
+  <<: *skip_WIP
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   dependencies:
     - make_stretch
@@ -578,6 +582,7 @@ test_suse15:
 test_18_foam:
   <<: *platforms_definition
   <<: *gitlab_runner_retry_definition
+  <<: *skip_WIP
   stage: test
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04_foam
   dependencies:
@@ -683,6 +688,7 @@ check_16_04:
 
 check_18_04:
   <<: *check_definition
+  <<: *skip_WIP
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   dependencies:
     - make_18_04
@@ -697,6 +703,7 @@ check_20_04:
 
 check_stretch:
   <<: *check_definition
+  <<: *skip_WIP
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   dependencies:
     - make_stretch
